Adwaita: Fix context menu shadows not showing up

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -3212,7 +3212,7 @@ GtkVolumeButton.button { padding: 8px; }
     box-shadow: 0 0 0 1px $_wm_border; //just doing borders, wm draws actual shadows
   }
   &.csd {
-    .popup {
+    &.popup {
       border-radius: 0;
       box-shadow: 0 1px 2px transparentize(black, 0.8),
                   0 0 0 1px transparentize($_wm_border,0.1);
